Fix spacing on select element to accomdate bottom of page

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,7 @@ p {
 }
 
 .fc-member-selector {
-  padding-top: 1rem;
+  padding: 1rem 0;
 }
 
 .member-image {
